--- a/SharedLibrary/SharedLibrary.csproj
+++ b/SharedLibrary/SharedLibrary.csproj
@@ -128,6 +128,12 @@
     <EmbeddedResource Include="Properties\SharedLibrary.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http">
+      <Version>2.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Devices">
+      <Version>1.22.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Client">
       <Version>1.30.0</Version>
     </PackageReference>
